--- a/comecytAzul.html
+++ b/comecytAzul.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Página Bilingüe Interactiva</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="comecytAzul.css">
 </head>
 <body>
   <header>
