--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>English Fun Academy</title>
-    <link rel="stylesheet" href="comecyt.Azul.css">
+    <link rel="stylesheet" href="comecytAzul.css">
 </head>
 <body>
 
