--- a/index.html
+++ b/index.html
@@ -217,6 +217,6 @@
     <p>English Fun Academy © 2026</p>
 </footer>
 
-<script src="script.js"></script>
+<script src="ComecytAzul.js"></script>
 </body>
 </html>
