--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>English Fun Academy</title>
+    <title>English Proyect COMECyT</title>
     <link rel="stylesheet" href="comecytAzul.css">
 </head>
 <body>
@@ -214,7 +214,7 @@
 </main>
 
 <footer>
-    <p>English Fun Academy © 2026</p>
+    <p>English proyect Comecyt © 2026</p>
 </footer>
 
 <script src="ComecytAzul.js"></script>
